--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pondjs": "^0.8.10",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "latest",
     "react-scripts": "3.2.0",
     "react-timeseries-charts": "0.16.1",
     "ringjs": "^0.0.1",
